--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -58,6 +58,7 @@
     font-size: 4rem;
     font-family: $font-primary;
     text-decoration: none;
+    color: black;
     &:visited {
       color: black;
       outline: none;
