--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -58,7 +58,7 @@
     font-size: 4rem;
     font-family: $font-primary;
     text-decoration: none;
-    color: black;
+    color: red;
     &:visited {
       color: black;
       outline: none;
