test red logo CD

--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -58,9 +58,9 @@
     font-size: 4rem;
     font-family: $font-primary;
     text-decoration: none;
-    color: blue;
+    color: red;
     &:visited {
-      color: black;
+      color: red;
       outline: none;
     }
   }
