added new start.sh with dev mode

--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -58,9 +58,9 @@
     font-size: 4rem;
     font-family: $font-primary;
     text-decoration: none;
-    color: green;
+    color: blue;
     &:visited {
-      color: green;
+      color: blue;
       outline: none;
     }
   }
