--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -8,6 +8,11 @@
   background-color: $primary;
   height: 8rem;
   width: 100%;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 10;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   &__left {
     display: flex;
@@ -58,9 +63,9 @@
     font-size: 4rem;
     font-family: $font-primary;
     text-decoration: none;
-    color: blue;
+    color: black;
     &:visited {
-      color: blue;
+      color: black;
       outline: none;
     }
   }
@@ -145,5 +150,33 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    height: auto;
+    padding: 1rem;
+
+    &__left {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
+
+    &__right {
+      margin: 1rem 0 0 0;
+      gap: 1rem;
+      flex-direction: column;
+    }
+
+    &__searchbar {
+      width: 100%;
+    }
+
+    &__logo {
+      font-size: 2.5rem;
+    }
   }
 }
