--- a/frontend/src/pages/SearchResults/SearchResults.scss
+++ b/frontend/src/pages/SearchResults/SearchResults.scss
@@ -17,6 +17,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
 
     img {
       width: 100%;
