--- a/frontend/src/pages/ProfilePage/ProfilePage.scss
+++ b/frontend/src/pages/ProfilePage/ProfilePage.scss
@@ -11,6 +11,7 @@
   &__card {
     background: white;
     border-radius: 1.5rem;
+    margin-bottom: 4rem;
     padding: 3rem 2rem;
     max-width: 600px;
     width: 100%;
@@ -48,6 +49,15 @@
     label {
       font-weight: bold;
       color: #555;
+    }
+  }
+
+  &__edit {
+    border-style: none;
+    cursor: pointer;
+    font-size: 1rem;
+    &:hover {
+      border-radius: 50%;
     }
   }
 
@@ -92,4 +102,49 @@
       background-color: $tertiary;
     }
   }
+}
+
+.profile__avatar-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.profile__edit-icon {
+  position: absolute;
+  border-style: none;
+  bottom: 20%;
+  right: 40%;
+  background-color: #fff;
+  cursor: pointer;
+  padding: 0.3rem 0.4rem;
+  font-size: 1rem;
+  transform: translate(50%, 50%);
+
+  &:hover {
+    background-color: $tertiary;
+    border-radius: 50%;
+  }
+
+  @media (max-width: 600px) {
+    bottom: 20%;
+    right: 25%;
+  }
+}
+
+.profile__avatar--initial {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: $secondary;
+  color: white;
+  font-weight: bold;
+  font-size: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  border: 2px solid $primary;
 }
