--- a/frontend/src/components/FriendList/FriendList.scss
+++ b/frontend/src/components/FriendList/FriendList.scss
@@ -90,3 +90,16 @@
     }
   }
 }
+
+.friendlist__remove {
+  background: none;
+  border: none;
+  color: #d32f2f;
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 0 0.5rem;
+
+  &:hover {
+    color: darkred;
+  }
+}
