--- a/frontend/src/components/FriendList/FriendList.scss
+++ b/frontend/src/components/FriendList/FriendList.scss
@@ -2,7 +2,6 @@
 
 .friendlist {
   padding: 2rem;
-  background: #f9f9fc;
 
   &__title {
     font-size: 2.2rem;
@@ -20,9 +19,11 @@
   }
 
   &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 1.5rem;
+    padding: 0;
+    list-style: none;
   }
 
   &__card {
