--- a/frontend/src/pages/ProfilePage/ProfilePage.scss
+++ b/frontend/src/pages/ProfilePage/ProfilePage.scss
@@ -1,21 +1,18 @@
 @import "../../assets/variables";
 
 .profile {
-  min-height: 100vh;
-  background: linear-gradient(135deg, #f9f9fc 0%, #eef2f7 100%);
+  min-height: 65vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3rem;
+  padding: 1rem;
 
   &__card {
     background: white;
     border-radius: 1.5rem;
-    margin-bottom: 4rem;
     padding: 3rem 2rem;
     max-width: 600px;
     width: 100%;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   }
 
   &__title {
@@ -147,4 +144,28 @@
   justify-content: center;
   margin-bottom: 2rem;
   border: 2px solid $primary;
+}
+
+.profile__toggle {
+  background: none;
+  border: none;
+  color: black;
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 1.5rem auto 0;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.profile__advanced {
+  background: #f7f7f7;
+  border-radius: 1rem;
+  padding: 1.5rem;
+  margin-top: 1.5rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
