--- a/frontend/src/components/Feed/Feed.scss
+++ b/frontend/src/components/Feed/Feed.scss
@@ -1,23 +1,23 @@
 @import "../../assets/variables";
 
 .feedpage {
-  padding: 3rem 6rem;
+  padding: 2rem 6rem;
   font-family: $font-primary;
 
   &__title {
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
   }
 
   &__list {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   &__card {
     background-color: $quaternary;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border: 1px solid #ccc;
@@ -36,8 +36,8 @@
 
   &__avatar,
   &__avatar--initial {
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
     object-fit: cover;
     border: 1px solid #999;
@@ -47,7 +47,7 @@
     background-color: $secondary;
     color: white;
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,7 +59,7 @@
   }
 
   &__text {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: 0;
 
     a {
@@ -77,18 +77,18 @@
   }
 
   &__date {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     color: #777;
   }
 
   &__review {
     font-style: italic;
-    font-size: 1.2rem;
+    font-size: 1rem;
     background-color: $secondary;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 0.7rem;
     color: #444;
     transition: max-height 1.2s ease-in-out, opacity 1s ease-in-out;
     max-height: 1000px;
@@ -101,7 +101,7 @@
   }
 
   &__rating {
-    color: #e7b300;
+    color: black;
     font-weight: bold;
   }
 
