--- a/frontend/src/components/BookDetail/BookDetail.scss
+++ b/frontend/src/components/BookDetail/BookDetail.scss
@@ -7,14 +7,14 @@
   &__cover {
     width: 20rem;
     height: 30rem;
-    margin-top: 4rem;
+    margin-top: 3rem;
     margin-left: 7rem;
     box-shadow: 3px 3px 3px gray;
     border: 1px solid black;
   }
 
   &__container {
-    margin-top: 4rem;
+    margin-top: 1rem;
     flex: 1;
     padding: 0 2rem;
   }
@@ -182,6 +182,7 @@
     border-radius: 1rem;
     padding: 0.8rem;
     border: 1px solid black;
+    width: 40rem;
 
     p {
       font-size: 1rem;
